Fixed line alignment on post.

--- a/src/app/shared/post/post.component.scss
+++ b/src/app/shared/post/post.component.scss
@@ -31,6 +31,7 @@
 }
 
 .post-interaction {
+  border-top: lightgray 1px solid;
   display: flex;
   align-items: center;
   justify-content: space-between;
