--- a/src/app/shared/post/reaction/reaction.component.scss
+++ b/src/app/shared/post/reaction/reaction.component.scss
@@ -1,11 +1,10 @@
 .container {
-  margin-top: 2rem;
-  border-top: lightgray 1px solid;
+  margin-top: 1rem;
   position: relative;
 }
 
 .like-reaction {
-  margin-top: 1rem;
+  margin-top: 0.625rem;
   position: relative;
 }
 
